...
    val coupons = vm.coupons.collectAsState().value

    Scaffold(
        containerColor = AppBackgroundCream,
        topBar = {
            TopAppBar(
                title = { Box(Modifier.fillMaxWidth(), contentAlignment = Alignment.Center) { Text("Cupones") } },
                colors = TopAppBarDefaults.topAppBarColors(
                    containerColor = AppBarYellow,
                    titleContentColor = AppBarText
                ),
                actions = {
                    TextButton(onClick = onProfile)       { Text("Perfil") }
...
